fixed some spacing issues on the activities detail panels

--- a/src/pages/Activities/Activities.css
+++ b/src/pages/Activities/Activities.css
@@ -6,6 +6,10 @@
     border-radius: 0 0 10px 10px;
 }
 
+.activity-detail-panel {
+    padding: 8px;
+}
+
 .activity-subtext {
     font-size: 14px;
     margin: 0 !important;
@@ -143,7 +147,7 @@
      display: flex;
      flex-direction: column;
      flex: 100%;
-     margin: 0.2rem 0 0.2rem 0;
+     margin: 0.3rem 0 0.3rem 0;
  }
 
  .task-room-picker-row {
